--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,20 @@
-.App {
-  text-align: center;
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.function-btns {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  gap: 1.5rem;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.search-btn {
+  border: 1px solid rgb(112, 109, 109);
+  margin-bottom: 1rem;
+  border-radius: 0.3rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
