--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,10 +1,13 @@
 
-.navbar h1 {
-    margin: 2rem 0 2rem;
-    background: blue;
-    color: white;
-}
 
+.nav-header h1 {
+    font-size: 1.5rem;
+    margin: 0 0 0.1rem;
+    padding: 1rem 0.3rem;
+    background: rgb(16, 69, 88);
+    color: white;
+    border-radius: 0.3rem;
+}
 
 ul { 
     text-align: start;
@@ -14,8 +17,7 @@ li {
     border-bottom: 1px solid gray;
 }
 
-
 a.active {
     color: white;
-    background: rgb(71, 73, 195);
+    background: rgb(36, 38, 159);
 }
